:art: LP solver

--- a/dnn/NearestNeighbor/EpsGraphnD/intersection_detection/Intersection_detection/Intersection_detection/Intersection_detection.vcxproj
+++ b/dnn/NearestNeighbor/EpsGraphnD/intersection_detection/Intersection_detection/Intersection_detection/Intersection_detection.vcxproj
@@ -79,6 +79,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <AdditionalIncludeDirectories>C:\Users\ALGO\Desktop\스타랩\postechDNN\dnn\NearestNeighbor\EpsGraphnD\intersection_detection\Intersection_detection\Intersection_detection\eigen;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -93,6 +95,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <AdditionalIncludeDirectories>C:\Users\ALGO\Desktop\스타랩\postechDNN\dnn\NearestNeighbor\EpsGraphnD\intersection_detection\Intersection_detection\Intersection_detection\eigen;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -107,7 +111,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\ALGO\Desktop\스타랩\postechDNN\dnn\NearestNeighbor\EpsGraphnD\intersection_detection\Intersection_detection\eigen</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\ALGO\Desktop\스타랩\postechDNN\dnn\NearestNeighbor\EpsGraphnD\intersection_detection\Intersection_detection\Intersection_detection\eigen;C:\Users\ALGO\Desktop\스타랩\postechDNN\dnn\NearestNeighbor\EpsGraphnD\intersection_detection\Intersection_detection\alglib\src;C:\Users\ALGO\Desktop\스타랩\postechDNN\dnn\NearestNeighbor\EpsGraphnD\intersection_detection\Intersection_detection\eigen</AdditionalIncludeDirectories>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -122,6 +127,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
+      <AdditionalIncludeDirectories>C:\Users\ALGO\Desktop\스타랩\postechDNN\dnn\NearestNeighbor\EpsGraphnD\intersection_detection\Intersection_detection\Intersection_detection\eigen;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -131,13 +138,52 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="alglibinternal.cpp" />
+    <ClCompile Include="alglibmisc.cpp" />
+    <ClCompile Include="ap.cpp" />
+    <ClCompile Include="dataanalysis.cpp" />
+    <ClCompile Include="diffequations.cpp" />
+    <ClCompile Include="fasttransforms.cpp" />
+    <ClCompile Include="integration.cpp" />
+    <ClCompile Include="interpolation.cpp" />
     <ClCompile Include="Intersection_detection.cpp" />
+    <ClCompile Include="kernels_avx2.cpp" />
+    <ClCompile Include="kernels_fma.cpp" />
+    <ClCompile Include="kernels_sse2.cpp" />
+    <ClCompile Include="linalg.cpp" />
+    <ClCompile Include="optimization.cpp" />
     <ClCompile Include="Point.cpp" />
     <ClCompile Include="Polytope.cpp" />
+    <ClCompile Include="solvers.cpp" />
+    <ClCompile Include="specialfunctions.cpp" />
+    <ClCompile Include="statistics.cpp" />
+    <ClCompile Include="stdafx.cpp">
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
+      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="alglibinternal.h" />
+    <ClInclude Include="alglibmisc.h" />
+    <ClInclude Include="ap.h" />
+    <ClInclude Include="dataanalysis.h" />
+    <ClInclude Include="diffequations.h" />
+    <ClInclude Include="fasttransforms.h" />
+    <ClInclude Include="integration.h" />
+    <ClInclude Include="interpolation.h" />
+    <ClInclude Include="kernels_avx2.h" />
+    <ClInclude Include="kernels_fma.h" />
+    <ClInclude Include="kernels_sse2.h" />
+    <ClInclude Include="linalg.h" />
+    <ClInclude Include="optimization.h" />
     <ClInclude Include="Point.h" />
     <ClInclude Include="Polytope.h" />
+    <ClInclude Include="solvers.h" />
+    <ClInclude Include="specialfunctions.h" />
+    <ClInclude Include="statistics.h" />
+    <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
