:art: Merge epsgraphnd into intersection detection

--- a/dnn/NearestNeighbor/EpsGraphnD/intersection_detection/Intersection_detection/Intersection_detection/Intersection_detection.vcxproj
+++ b/dnn/NearestNeighbor/EpsGraphnD/intersection_detection/Intersection_detection/Intersection_detection/Intersection_detection.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="alglibinternal.cpp" />
     <ClCompile Include="alglibmisc.cpp" />
     <ClCompile Include="ap.cpp" />
+    <ClCompile Include="EpsGraphnD.cpp" />
     <ClCompile Include="Intersection_detection.cpp" />
     <ClCompile Include="linalg.cpp" />
     <ClCompile Include="optimization.cpp" />
@@ -152,6 +153,7 @@
     <ClInclude Include="alglibinternal.h" />
     <ClInclude Include="alglibmisc.h" />
     <ClInclude Include="ap.h" />
+    <ClInclude Include="EpsGraphnD.h" />
     <ClInclude Include="linalg.h" />
     <ClInclude Include="optimization.h" />
     <ClInclude Include="Point.h" />
