:art: Added shortest path map class.

--- a/dnn/NearestNeighbor/ENN/C_Subidivision/Makefile
+++ b/dnn/NearestNeighbor/ENN/C_Subidivision/Makefile
@@ -8,10 +8,10 @@ subdirs: $(SUBDIRS)
 $(SUBDIRS): 
 	$(MAKE) -C $@
 
-main.exe : main.o C_Subdivision.o WC_region.o CS_Free.o APX_wavefront.o WF_propagation.o Testcode/test_csdiv_pts/test_csdiv_pts.h
-	g++ -o main.exe main.o C_Subdivision.o WC_region.o CS_Free.o APX_wavefront.o WF_propagation.o ./DCEL/DCEL_lib.a ./Testcode/test_lib.a ./PointLocation/Location_lib.a
+main.exe : main.o C_Subdivision.o WC_region.o CS_Free.o APX_wavefront.o WF_propagation.o SPM.o Testcode/test_csdiv_pts/test_csdiv_pts.h
+	g++ -o main.exe main.o C_Subdivision.o WC_region.o CS_Free.o APX_wavefront.o WF_propagation.o SPM.o ./DCEL/DCEL_lib.a ./Testcode/test_lib.a ./PointLocation/Location_lib.a
 
-main.o : main.cpp C_Subdivision.h WF_propagation.h DCEL/DCEL.h DCEL/point.h
+main.o : main.cpp C_Subdivision.h WF_propagation.h SPM.h DCEL/DCEL.h DCEL/point.h
 	g++ -o main.o -c main.cpp -std=c++17
 
 C_Subdivision.o : C_Subdivision.cpp Disjoint_Set.h
@@ -28,6 +28,10 @@ APX_wavefront.o : APX_wavefront.cpp
 
 WF_propagation.o : WF_propagation.cpp DCEL/DCEL.h APX_wavefront.h CS_Free.h
 	g++ -o WF_propagation.o  -c WF_propagation.cpp -std=c++17
+
+SPM.o : SPM.cpp DCEL/DCEL.h WF_propagation.h
+	g++ -o SPM.o  -c SPM.cpp -std=c++17
+
 
 CLEANSUBDIRS = $(addprefix clean-,$(SUBDIRS))
 .PHONY: clean $(CLEANSUBDIRS)
