--- a/dnn/NearestNeighbor/ENN/C_Subidivision/.vscode/settings.json
+++ b/dnn/NearestNeighbor/ENN/C_Subidivision/.vscode/settings.json
@@ -42,6 +42,8 @@
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "xhash": "cpp",
+        "xtree": "cpp"
     }
 }
